--- a/common/assets/css/main.css
+++ b/common/assets/css/main.css
@@ -92,11 +92,11 @@ body {
 .G-div       { background-color: orange; }
 .EMPTY-div   { background-color: #777; }
 
-.fighter-div        { background-image: url('/common/assets/img/class_fighter.png'); }
-.slasher-div        { background-image: url('/common/assets/img/class_slasher.png'); }
-.striker-div        { background-image: url('/common/assets/img/class_striker.png'); }
-.shooter-div        { background-image: url('/common/assets/img/class_shooter.png'); }
-.free-spirit-div    { background-image: url('/common/assets/img/class_free_spirit.png'); }
-.cerebral-div       { background-image: url('/common/assets/img/class_cerebral.png'); }
-.powerhouse-div     { background-image: url('/common/assets/img/class_powerhouse.png'); }
-.driven-div         { background-image: url('/common/assets/img/class_driven.png'); }
+.fighter-div        { background-image: url('../img/class_fighter.png'); }
+.slasher-div        { background-image: url('../img/class_slasher.png'); }
+.striker-div        { background-image: url('../img/class_striker.png'); }
+.shooter-div        { background-image: url('../img/class_shooter.png'); }
+.free-spirit-div    { background-image: url('../img/class_free_spirit.png'); }
+.cerebral-div       { background-image: url('../img/class_cerebral.png'); }
+.powerhouse-div     { background-image: url('../img/class_powerhouse.png'); }
+.driven-div         { background-image: url('../img/class_driven.png'); }
