--- a/tm-planner/assets/css/tm-planner.css
+++ b/tm-planner/assets/css/tm-planner.css
@@ -81,7 +81,7 @@
     width: 40px;
     height: 40px;
     margin: 1px;
-    background-image: url('/tm-planner/assets/img/add.png');
+    background-image: url('../img/add.png');
     background-size: 100%;
     cursor: pointer;
 }
@@ -90,7 +90,7 @@
     width: 40px;
     height: 40px;
     margin: 1px;
-    background-image: url('/tm-planner/assets/img/add.png');
+    background-image: url('../img/add.png');
     background-size: 100%;
     display: inline-block;
 }
