--- a/tm-planner/assets/css/tm-planner.css
+++ b/tm-planner/assets/css/tm-planner.css
@@ -160,6 +160,12 @@
     position: relative;
     display: inline-block;
     opacity: 1;
+}
+
+.tooltip-boss {
+    position: relative;
+    display: inline-block;
+    opacity: 1;
     z-index: 1;
 }
 
