--- a/common/assets/css/main.css
+++ b/common/assets/css/main.css
@@ -3,7 +3,7 @@ body {
     font-size: 15px;
 }
 
-.tooltip {
+.tooltip, .tooltip-boss {
     font-family: 'Ubuntu', sans-serif;
     font-size: 12px;
 }
