Beta version of Drag & Drop for Ambush Boss

--- a/tm-planner/assets/css/tm-planner.css
+++ b/tm-planner/assets/css/tm-planner.css
@@ -132,6 +132,11 @@
     filter: brightness(0.5);
 }
 
+.booster-ambush-clone > img {
+    -webkit-filter: brightness(2);
+    filter: brightness(2);
+}
+
 #export-url-div,
 #read-only-button-div {
     display: none;
