--- a/tm-planner/assets/css/tm-planner.css
+++ b/tm-planner/assets/css/tm-planner.css
@@ -213,13 +213,33 @@
 }
 
 .rec-char {
-    box-shadow: 0px 0px 8px 3px #8c6cff;
+    -webkit-animation: glow-rec 1s infinite alternate;
+    animation: glow-rec 1s infinite alternate;
 }
 
 .rec-char-alt {
-    box-shadow: 0px 0px 8px 3px #FFFF66;
+    -webkit-animation: glow-rec-alt 1s infinite alternate;
+    animation: glow-rec-alt 1s infinite alternate;
 }
 
 .rec-char-dh {
     box-shadow: none !important;
+}
+
+@keyframes glow-rec {
+    from {
+        box-shadow: 0 0 8px -3px #8c6cff;
+    }
+    to {
+        box-shadow: 0 0 8px 3px #8c6cff;
+    }
+}
+
+@keyframes glow-rec-alt {
+    from {
+        box-shadow: 0 0 8px -3px #FFFF66;
+    }
+    to {
+        box-shadow: 0 0 8px 3px #FFFF66;
+    }
 }
