Fixed glow not appearing for ambush clone boosters on creation

--- a/tm-planner/assets/css/tm-planner.css
+++ b/tm-planner/assets/css/tm-planner.css
@@ -230,6 +230,12 @@
 
 .rec-char-dh {
     box-shadow: none !important;
+    animation: none !important;
+}
+
+.rec-char-alt-dh {
+    box-shadow: none !important;
+    animation: none !important;
 }
 
 @keyframes glow-rec {
